# ER_Bosses_Overlay

./: CMakeLists.txt  EROverlay.ini
data/frafr/: bosses_with_scaling_bis.json
src/: CMakeLists.txt  dllmain.cpp  steamapi.cpp  steamapi.hpp
src/Seed/: SeedInfoAPI.cpp  SeedInfoAPI.hpp
src/bosses/: data.cpp  data.hpp  render.cpp  render.hpp  scaling.cpp  scaling.hpp
src/util/: clipboard.hpp  crypto.cpp  crypto.hpp
